--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   cunning_document_scanner: ^1.2.3
   camera: ^0.11.0+2
   gallery_saver: ^2.3.2
+  pdf: ^3.11.1
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
