--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   open_file: ^3.5.5
   intl: ^0.19.0
   shared_preferences: ^2.3.2
+  firebase_storage: ^12.3.2
+  firebase_app_check: ^0.3.1+3
 
 dev_dependencies:
   flutter_test:
