--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   shared_preferences: ^2.3.2
   firebase_storage: ^12.3.2
   firebase_app_check: ^0.3.1+3
+  google_maps_flutter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
