--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,12 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Non-target build platforms 
+linux/
+windows/
+macos/
+web/
+
+# Keys
+lib/firebase_options.dart
