--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   firebase_storage: ^12.3.2
   firebase_app_check: ^0.3.1+3
   flutter_dotenv: ^5.2.1
+  sqflite: ^2.4.1
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
